--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 <body>
   <main>
   
-<div class="product-img">    
+<!--<div class="product-img">    
 <img class="img-mobile" src="./images/image-product-mobile.jpg">
 <img class="img-desktop" src="./images/image-product-desktop.jpg">
 </div>
+-->
+<picture>
+  <source media="(max-width: 650px)" srcset="./images/image-product-mobile.jpg">
+  <img src="./images/image-product-desktop.jpg" alt="Parfum" style="width:auto;">
+</picture>
 
 <div id="product-inf">
   <header>Perfume</header>
