--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 -->
 <picture>
   <source media="(max-width: 650px)" srcset="./images/image-product-mobile.jpg">
-  <img src="./images/image-product-desktop.jpg" alt="Parfum" style="width:250px;">
+  <img src="./images/image-product-desktop.jpg" alt="Parfum" style="width:100%;">
 </picture>
 
 <div id="product-inf">
