--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@
 <body>
   <main>
   
-<!--<div class="product-img">    
-<img class="img-mobile" src="./images/image-product-mobile.jpg">
-<img class="img-desktop" src="./images/image-product-desktop.jpg">
-</div>
--->
 <picture>
   <source media="(max-width: 650px)" srcset="./images/image-product-mobile.jpg">
-  <img src="./images/image-product-desktop.jpg" alt="Parfum" style="width:100%;">
+  <img src="./images/image-product-desktop.jpg" alt="Parfum">
 </picture>
 
 <div id="product-inf">
